# trading25

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  pyrightconfig.json  security_best_practices_report.md
apps/bt/: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-dev.txt
apps/bt/.claude/commands/: analyze-strategy.md
apps/bt/.claude/skills/: LEGACY.md
apps/bt/.github/workflows/: ci.yml
apps/bt/benchmarks/: market-v5-sync-fixture-evidence.json
apps/bt/benchmarks/fixtures/: market-v5-sync.json
apps/bt/config/: default.yaml
apps/bt/docs/: README.md  commands.md  kelly-criterion-allocation.md  parameter-optimization-system-v2.md  parameter-optimization-system.md  parameter-optimization.md  research-core.md  spec-timeframe-resample.md  strategies.md  test-runtime.md
apps/bt/docs/experiments/: README.md  research-catalog-metadata.toml  research-publication-contract.md
apps/bt/docs/fixes/: aicheck-critical-fixes-20251016.md  beta-filter-benchmark-data-loading.md
apps/bt/docs/pandas/: fillna-futurewarning.md
apps/bt/docs/signals/: index_daily_change.md
apps/bt/docs/vectorbt/: README.md  base.md  data.md  generic.md  indicators.md  labels.md  messaging.md  ohlcv_accessors.md  portfolio-direction-behavior.md  portfolio-optimization.md  portfolio.md  positions-analysis.md  px_accessors.md  pyramiding_implementation.md  records.md  returns.md  root_accessors.md  signals.md  utils.md
apps/bt/issues/: bt-017-signal-registry-param-key-validation.md
apps/bt/issues/done/: bt-003-deep-merge-shared-config.md  bt-007-backtestrunner-execution-config.md  bt-010-run-manifest-output.md  bt-011-metrics-json-output.md  bt-012-walkforward-oos.md  bt-013-transaction-costs.md  bt-015-regression-tests-coverage.md  bt-018-remove-dead-perform-screening.md  bt-019-portfolio-client-readonly.md  bt-020-consolidate-cli-market-to-ts.md  bt-021-topix-dual-load-cleanup.md
apps/bt/notebooks/playground/: hedge_1357_nt_ratio_topix_playground.py  nt_ratio_change_stock_overnight_distribution_playground.py  nt_ratio_change_topix_close_stock_overnight_distribution_playground.py  prime_ex_topix500_sma_ratio_rank_future_close_playground.py  risk_adjusted_return_playground.py  stock_intraday_overnight_share_playground.py  topix100_price_to_sma50_decile_partitions_playground.py  topix100_price_vs_sma20_rank_future_close_playground.py  topix100_price_vs_sma20_regime_conditioning_playground.py  topix100_price_vs_sma50_q10_bounce_regime_conditioning_playground.py  topix100_price_vs_sma_q10_bounce_playground.py  topix100_price_vs_sma_rank_future_close_playground.py  topix100_q10_bounce_streak_353_conditioning_playground.py  topix100_short_side_streak_353_scan_playground.py  topix100_sma50_raw_vs_atr_q10_bounce_playground.py  topix100_sma_ratio_rank_future_close_playground.py  topix100_sma_ratio_regime_conditioning_playground.py  topix100_streak_353_multivariate_priority_playground.py  topix100_streak_353_next_session_intraday_discrete_ablation_walkforward_playground.py  topix100_streak_353_next_session_intraday_lightgbm_playground.py  topix100_streak_353_next_session_intraday_lightgbm_walkforward_playground.py  topix100_streak_353_signal_score_lightgbm_playground.py  topix100_streak_353_signal_score_lightgbm_walkforward_playground.py  topix100_streak_353_transfer_playground.py  topix100_strongest_setup_q10_threshold_playground.py  topix100_vi_change_regime_conditioning_playground.py  topix_close_return_streaks_playground.py  topix_close_stock_overnight_distribution_playground.py  topix_extreme_close_to_close_mode_playground.py  topix_extreme_mode_mean_reversion_comparison_playground.py  topix_gap_intraday_distribution_playground.py  topix_streak_extreme_mode_playground.py  topix_streak_multi_timeframe_mode_playground.py
apps/bt/notebooks/templates/: optimization_analysis.py  strategy_analysis.py
apps/bt/scripts/: benchmark_market_v4_actual.py  benchmark_market_v5_sync.py  export_openapi.py  measure_indicator_latency.py
apps/bt/scripts/research/: common.py  publish_ranking_research.py  run_1357_nt_ratio_topix_hedge.py  run_accumulation_flow_followthrough.py  run_annual_first_open_last_close_fundamental_panel.py  run_annual_forward_per_regime_decomposition.py  run_annual_fundamental_confounder_analysis.py  run_annual_large_universe_factor_family.py  run_annual_large_universe_value_profile.py  run_annual_market_fundamental_divergence.py  run_annual_prime_value_pbr_absorption.py  run_annual_prime_value_technical_risk_decomposition.py  run_annual_prime_value_volume_volatility_participation.py  run_annual_sector_relative_value_composite.py  run_annual_value_breakout_periodic_rebalance.py  run_annual_value_composite_selection.py  run_annual_value_composite_technical_filter.py  run_annual_value_periodic_rebalance.py  run_annual_value_technical_feature_importance.py  run_atr_expansion_forward_response.py  run_classical_momentum_research.py  run_daily_move_asymmetry.py  run_earnings_holdthrough_expectancy.py  run_falling_knife_bad_tail_pruning.py  run_falling_knife_fundamental_quality_pruning.py  run_falling_knife_long_horizon_technical_profile.py  run_falling_knife_non_rebound_fundamental_profile.py  run_falling_knife_reversal_study.py  run_forward_eps_component_decomposition.py  run_forward_eps_driven_v3_factor_decomposition.py  run_forward_eps_technical_horizon_decomposition.py  run_forward_eps_threshold_window_study.py  run_forward_eps_trade_archetype_decomposition.py  run_free_float_liquidity_gap.py  run_free_float_liquidity_implied_price_convergence.py  run_free_float_liquidity_prime_momentum_interaction.py  run_free_float_liquidity_regime_decomposition.py  run_fy_eps_sign_next_fy_return.py  run_high_zone_bearish_price_action.py  run_index_market_strength_research.py  (+123 more)
apps/bt/src/: __init__.py
apps/bt/src/agent/: __init__.py  models.py  optuna_optimizer.py  parameter_evolver.py  signal_augmentation.py  signal_catalog.py  signal_filters.py  signal_param_factory.py  signal_search_space.py  strategy_improver.py  (+3 more)
apps/bt/tests/: conftest.py
(+2383 files in other folders)
