[project]
name = "trading25-bt"
version = "0.1.0"
description = "バックテストツール"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "vectorbt>=0.26.0",
    "pandas>=2.0.0",
    "numpy>=1.20.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",  # Statistical functions (pearsonr, linregress)
    "httpx>=0.27.0",  # Sync HTTP client for API calls
    "optuna>=3.0.0",  # Bayesian optimization for strategy agent
    "marimo>=0.10.0",  # Reactive notebook with static HTML export
    "ruamel.yaml>=0.18.0",  # YAML library with comment preservation
    "watchdog>=6.0.0",
    "fastapi>=0.115.0",  # FastAPI server for backtest API
    "uvicorn[standard]>=0.34.0",  # ASGI server for FastAPI
    "sse-starlette>=2.0.0",  # Server-Sent Events for FastAPI
    "sqlalchemy>=2.0.0",  # Core query builder for DB access (no ORM)
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
# 統一CLIコマンド
bt = "src.cli_bt:app"

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.2.250827",
    "pyright>=1.1.404",
    "ruff>=0.12.11",
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "respx>=0.21.0",
    "mypy>=1.8.0",
]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
reportMissingImports = true
reportMissingTypeStubs = false
reportAttributeAccessIssue = false
reportCallIssue = false
reportOptionalMemberAccess = false
reportPossiblyUnboundVariable = true
pythonVersion = "3.12"
reportUnusedImport = "error"
reportUnusedClass = "error"
reportUnusedFunction = "error"
reportUnusedVariable = "error"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = ["--verbose", "--tb=short", "--strict-markers", "--disable-warnings"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/*/__init__.py",
    "src/cli_bt/__main__.py",
]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

# パッケージ固有設定
[[tool.mypy.overrides]]
module = ["vectorbt.*", "optuna.*", "marimo.*", "ruamel.*"]
ignore_missing_imports = true
