[project]
name = "trading25-bt"
version = "0.1.0"
description = "バックテストツール"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "vectorbt>=1.1.0",
    "pandas>=2.0.0",
    "numpy>=2.4.6",
    "typer>=0.26.8",
    "rich>=15.0.0",
    "loguru>=0.7.0",
    "pydantic>=2.13.4",
    "scipy>=1.18.0",  # Statistical functions (pearsonr, linregress)
    "httpx>=0.27.0",  # Sync HTTP client for API calls
    "optuna>=4.9.0",  # Bayesian optimization for strategy agent
    "ruamel.yaml>=0.18.0",  # YAML library with comment preservation
    "fastapi>=0.139.0",  # FastAPI server for backtest API
    "uvicorn[standard]>=0.51.0",  # ASGI server for FastAPI
    "sse-starlette>=3.4.5",  # Server-Sent Events for FastAPI
    "sqlalchemy>=2.0.51",  # Core query builder for DB access (no ORM)
    "duckdb>=1.5.4",  # Market time-series data plane (DuckDB + Parquet)
    "moomoo-api>=10.8.6808",
]

[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
# 統一CLIコマンド
bt = "src.entrypoints.cli:app"

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "pandas-stubs>=3.0.3.260530",
    "pyright>=1.1.411",
    "ruff>=0.15.22",
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=4.0.0",
    "respx>=0.23.1",
    "mypy>=2.3.0",
]
research = [
    "lightgbm>=4.0.0",
]
nautilus = [
    "nautilus-trader>=1.230.0",
]
rust = [
    "vectorbt-rust>=1.1.0",
]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
reportMissingImports = true
reportMissingTypeStubs = false
reportAttributeAccessIssue = false
reportCallIssue = false
reportOptionalMemberAccess = false
reportPossiblyUnboundVariable = true
pythonVersion = "3.12"
reportUnusedImport = "error"
reportUnusedClass = "error"
reportUnusedFunction = "error"
reportUnusedVariable = "error"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = ["--verbose", "--tb=short", "--strict-markers", "--disable-warnings"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Runtime-heavy tests excluded by local fast mode",
    "nautilus_smoke: Real Nautilus runtime smoke tests",
    "darwin_capability: Darwin kernel capability tests run on macOS CI",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/*/__init__.py",
    "src/entrypoints/cli/__main__.py",
]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

# パッケージ固有設定
[[tool.mypy.overrides]]
module = ["vectorbt.*", "optuna.*", "ruamel.*"]
ignore_missing_imports = true
